@@ -1,3 +1,8 @@
+1998-05-31  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
+
+	* gnome-mdi.c: added images to Dnd cursors. The widges are global vars,
+	but I'm not sure whether this is a good solution.
+	
 1998-05-28  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
 
 	* gnome-mdi.[ch]: cleaned the code up a bit and added toolbar creation
